# reddit-scraper

./: .gitignore  pyproject.toml  scraper.ipynb  scraper.py
examples/: scraper.py
notebooks/: comments.ipynb  posts.ipynb  read.ipynb
reddit/: post.json  search.json
reddit_scraper/: client.py  model.py
scrp/: client.py  model.py
yars/: yars.py
yars2/: client.py  model.py
