[project]
name = "redis-scraper"
version = "0.1.0"
description = "Reddit scraper inspired by the YARS scraper."
readme = "README.md"
requires-python = "==3.13"
dependencies = [
    "httpx==0.28.*",
    "pydantic==2.10.*",
    "requests==2.32.*",
    "swiftshadow==2.1.*",
]

[dependency-groups]
dev = [
    "ipykernel>=6,<7",
]
