[project]
name = "scrp"
version = "0.1.0"
description = "Reddit scraper."
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "httpx==0.28.*",
    "polars==1.23.*",
    "pydantic==2.10.*",
    "requests==2.32.*",
    "swiftshadow==2.1.*",
    "tenacity>=9.0.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6,<7",
    "pandas>=2,<3",
    "pyarrow>=19,<20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["scrp"]
